# sparkweaver.web

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  copy_emsdk_headers.sh
src/: main.cpp
ui/: .editorconfig  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.svelte  app.css  main.ts
ui/src/lib/: BluetoothLink.svelte  Node.svelte  Node.svelte.ts  NodeAnchor.svelte  NodeCanvas.svelte  NodeEdit.svelte  NodeParam.svelte.ts  NodeToolbar.svelte  SWNode.svelte.ts  SWParam.svelte.ts  TreeDebug.svelte  TreeSimulation.svelte  bluetooth.ts  consts.ts  store.ts  utils.ts
ui/src/lib/bus/: log.bus.ts  route.bus.ts
ui/src/lib/components/: BluetoothLink.svelte  BluetoothToolbar.svelte  CoreSimulationToolbar.svelte  DebugToolbar.svelte  EditorCanvas.svelte  EditorNode.svelte  EditorNodeAnchor.svelte  EditorParams.svelte  EditorToolbar.svelte  GlobalNavigation.svelte  Node.svelte  NodeAnchor.svelte  NodeCanvas.svelte  NodeEdit.svelte  NodeToolbar.svelte  NodeTreeDebug.svelte  NodeTreeSimulation.svelte  ProjectToolbar.svelte  SimulationLight.svelte  SimulationLightRgb.svelte  SimulationToolbar.svelte
ui/src/lib/model/: bluetooth.model.ts  canvasNode.model.ts  core.model.ts  log.model.ts  node.model.ts  nodeConfig.model.ts  nodeLink.model.ts  nodeParam.model.ts  project.model.ts  route.model.ts  ui.model.ts
ui/src/lib/route/: RouteNotFound.svelte  RouteProject.svelte  RouteProjects.svelte  RouteRemote.svelte
ui/src/types/: core-extra.d.ts
(+42 files in other folders)
